--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "rap2hpoutre/laravel-log-viewer": "^1.3",
+        "spatie/laravel-cors": "^1.6",
         "tymon/jwt-auth": "1.0.*"
     },
     "require-dev": {
